Implement refuel events